--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-j1-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-j1-cmd.dtsi
@@ -100,5 +100,26 @@
 		qcom,mdss-dsi-te-dcs-command = <1>;
 		qcom,mdss-dsi-te-check-enable;
 		qcom,mdss-dsi-te-using-te-pin;
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				50 10 00 00 10 00 02 11 29
+				01 00 20 B0 00 29 01 00 28
+				40 02 90 10 00 00 00 32 C8
+				00 FD FE FC D8 00 00 FC FE
+				FB DC 00 1F 3F 00 FC 00 00
+				FE FD F9 99 00 FE FC FB C8
+				FF F4 EB FC 00 FE FA FD FC
+				00 FE FB FA E5 00 FF F6 F2
+				D3 29 01 00 00 2C CA 1D FC
+				CA DA D2 E2 DD D3 F0 CD 39
+				F6 00 F7 2E F7 00 EE 36 FF
+				00 E6 3D 1E FF 00 FF 00 66
+				FB 4D FF FF 00 30 CF FF 29
+				10 00 00 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				05 01 00 00 78 00 02 11 00
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 11
+				29 01 00 00 00 00 02 B0 03];
 	};
 };
