ARM64: configs: Update
* Disable slub debug
* Switch to strong stackprotector
* Enable CONFIG_BALANCE_ANON_FILE_RECLAIM
* Disable network filesystems

Change-Id: I509034afbf476b9a51844bea08ffbd32c1adea44

--- a/arch/arm64/configs/lithium_defconfig
+++ b/arch/arm64/configs/lithium_defconfig
@@ -29,8 +29,9 @@ CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
-CONFIG_CC_STACKPROTECTOR_REGULAR=y
+CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_BFQ=y
@@ -46,6 +47,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 CONFIG_ARMV8_DEPRECATED=y
@@ -580,7 +582,7 @@ CONFIG_F2FS_FS=y
 # CONFIG_F2FS_FS_POSIX_ACL is not set
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
-CONFIG_CIFS=y
+# CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_CODEPAGE_936=y
 CONFIG_NLS_CODEPAGE_950=y
