ARCH: dts: Update panel DT from stock
* Imported from MIUI 7.8.14

Change-Id: I87f9a40e9d779a1cecee1758bed1136abbd30d37

--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-j1-pro-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-j1-pro-cmd.dtsi
@@ -102,5 +102,6 @@
 		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-tx-eot-append;
 		qcom,esd-err-irq-gpio = <&tlmm 14 0x2001>;
+		qcom,mdss-panel-on-dimming-delay = <120>;
 	};
 };
