--- a/arch/arm/boot/dts/qcom/dsi-panel-auo-fte716-1080p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-auo-fte716-1080p-video.dtsi
@@ -211,10 +211,11 @@
 		qcom,mdss-dsi-max-refresh-rate = <60>;
 		qcom,mdss-dsi-tx-eot-append;
 		qcom,esd-check-enabled;
-
 		qcom,mdss-dsi-panel-status-check-mode = "te_signal_check";
+		qcom,video-panel-esd-te-check;
 
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 		qcom,cont-splash-enabled;
+		qcom,mdss-panel-on-dimming-delay = <120>;
 	};
 };
