--- a/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-p2-fhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-p2-fhd-video.dtsi
@@ -82,6 +82,7 @@
 		/* p2 panel use gpio irp to triger esd directly */
 		qcom,esd-check-enabled;
 		qcom,mdss-dsi-panel-status-check-mode = "te_signal_check";
+		qcom,video-panel-esd-te-check;
 		qcom,oled-hbm-mode;
 		qcom,cont-splash-enabled;
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_amoled>;
