--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fte716-1080p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fte716-1080p-video.dtsi
@@ -160,5 +160,6 @@
 
 		qcom,cont-splash-enabled;
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
+		qcom,mdss-panel-on-dimming-delay = <120>;
 	};
 };
