--- a/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-fhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-fhd-video.dtsi
@@ -30,7 +30,7 @@
 		qcom,mdss-dsi-h-back-porch = <60>;
 		qcom,mdss-dsi-h-pulse-width = <8>;
 		qcom,mdss-dsi-h-sync-skew = <0>;
-		qcom,mdss-dsi-v-back-porch = <41>;
+		qcom,mdss-dsi-v-back-porch = <48>;
 		qcom,mdss-dsi-v-front-porch = <40>;
 		qcom,mdss-dsi-v-pulse-width = <8>;
 		qcom,mdss-dsi-h-left-border = <0>;
@@ -43,17 +43,14 @@
 		qcom,mdss-dsi-border-color = <0>;
 		qcom,mdss-dsi-on-command = [
 				15 01 00 00 01 00 02 B0 5A
-				39 00 00 00 00 00 08 B2 13 02 70 D0 FF FF 15
-				39 00 00 00 00 00 03 FA 00 05
-				05 01 00 00 78 00 02 11 00
-				39 00 00 00 05 00 07 C9 32 B2 03 00 00 F0
-				15 01 00 00 01 00 02 E3 01
+				39 00 00 00 00 00 08 B2 13 12 40 D0 FF FF 15 15 01 00 00 01 00 02 E3 01
+				39 00 00 00 00 00 04 F3 03 00 00
 				15 00 00 00 00 00 02 51 20
 				15 00 00 00 00 00 02 53 20
 				15 00 00 00 00 00 02 55 00
 				15 01 00 00 01 00 02 B0 00
-				05 01 00 00 14 00 02 29 00
-				];
+				05 01 00 00 78 00 02 11 00
+				05 01 00 00 14 00 02 29 00];
 		qcom,mdss-dsi-off-command = [
 				05 01 00 00 02 00 02 28 00
 				05 01 00 00 80 00 02 10 00];
@@ -68,7 +65,7 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
-		qcom,mdss-dsi-panel-timings = [e4 4D 39 00 ab ac 2D 50 3f 03 04 00];
+		qcom,mdss-dsi-panel-timings = [E1 34 24 00 64 68 28 38 2B 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x20>;
 		qcom,mdss-dsi-t-clk-pre = <0x36>;
 		qcom,mdss-dsi-bl-min-level = <1>;
@@ -76,7 +73,7 @@
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
-		qcom,mdss-dsi-reset-sequence = <1 10>, <0 1>, <1 10>;
+		qcom,mdss-dsi-reset-sequence = <1 10>, <0 1>, <1 20>;
 		qcom,mdss-pan-physical-width-dimension = <71>;
 		qcom,mdss-pan-physical-height-dimension = <126>;
 		qcom,mdss-dsi-tx-eot-append;
