ARCH: dts: Update panel DT from stock
* Imported from MIUI 7.8.14

Change-Id: I87f9a40e9d779a1cecee1758bed1136abbd30d37

--- a/arch/arm/boot/dts/qcom/dsi-panel-samsung-youm-s6e3hf3-dualmipi-wqhd-command.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-samsung-youm-s6e3hf3-dualmipi-wqhd-command.dtsi
@@ -65,6 +65,12 @@
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
 		qcom,mdss-dsi-panel-timings = [D6 46 30 00 A4 A6 26 49 36 03 04 00];
+		qcom,mdss-dsi-panel-timings-phy-v2 = [
+			23 1e 07 08 50 30 4a 00
+			23 1e 07 08 50 30 4a 00
+			23 1e 07 08 50 30 4a 00
+			23 1e 07 08 50 30 4a 00
+			23 18 07 08 40 30 4a 00];
 		qcom,mdss-dsi-t-clk-post = <0x2C>;
 		qcom,mdss-dsi-t-clk-pre = <0x1C>;
 		qcom,mdss-dsi-bl-min-level = <1>;
