--- a/arch/arm/boot/dts/qcom/dsi-panel-samsung-s6e3hf3x01-dualmipi-wqhd-command.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-samsung-s6e3hf3x01-dualmipi-wqhd-command.dtsi
@@ -65,6 +65,12 @@
 		qcom,mdss-dsi-lane-3-state;
 		qcom,cmd-sync-wait-broadcast;
 		qcom,mdss-dsi-panel-timings = [D6 46 30 00 A4 A3 2D 49 36 03 04 00];
+		qcom,mdss-dsi-panel-timings-phy-v2 = [
+			23 20 06 09 50 30 4a 00
+			23 20 06 09 50 30 4a 00
+			23 20 06 09 50 30 4a 00
+			23 20 06 09 50 30 4a 00
+			23 2e 06 08 50 30 4a 00];
 		qcom,mdss-dsi-t-clk-post = <0x2C>;
 		qcom,mdss-dsi-t-clk-pre = <0x1C>;
 		qcom,mdss-dsi-bl-min-level = <1>;
