ARM: dts: Add LiveDisplay CABC feature
Change-Id: I92dd7068f7bbe6ab5d172ba265729611bc27fa11

--- a/arch/arm/boot/dts/qcom/dsi-panel-auo-fte716-1080p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-auo-fte716-1080p-video.dtsi
@@ -216,5 +216,10 @@
 
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
 		qcom,cont-splash-enabled;
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [15 01 00 00 00 00 02 55 02];
+		cm,mdss-livedisplay-cabc-post-cmd = [15 01 00 00 01 00 02 55 00];
 	};
 };
