--- a/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-p2-fhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-lgd-sw43101-p2-fhd-video.dtsi
@@ -85,5 +85,11 @@
 		qcom,oled-hbm-mode;
 		qcom,cont-splash-enabled;
 		qcom,panel-supply-entries = <&dsi_panel_pwr_supply_amoled>;
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [15 01 00 00 01 00 02 53 24];
+		cm,mdss-livedisplay-cabc-post-cmd = [15 01 00 00 01 00 02 53 20];
+		cm,mdss-livedisplay-command-state = "dsi_lp_mode";
 	};
 };
