--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-pro-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-pro-cmd.dtsi
@@ -102,5 +102,19 @@
 		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-dsi-tx-eot-append;
 		qcom,esd-err-irq-gpio = <&tlmm 14 0x2001>;
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [
+				29 01 00 00 02 B0 43 90 10
+				00 25 58 32 90 10 08 BA AB
+				51 09 00 10 00 29 01 00 01
+				AC E5 54 05 60 6E 87 A0 B6
+				CF E8 E9 EA 0E BE CE DE EE
+				FF F0 40 00 40 44 20 06 95
+				A2 90 10 0A F9 64 FF 0E 0B
+				E0 08 DB F8 00 02 90 10 00
+				00 02 B0 03];
+		cm,mdss-livedisplay-cabc-post-cmd = [39 01 00 00 01 00 02 55 00];
 	};
 };
