--- a/arch/arm/boot/dts/qcom/dsi-panel-lgd-fhd-td4722-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-lgd-fhd-td4722-cmd.dtsi
@@ -101,5 +101,19 @@
 		qcom,mdss-dsi-te-check-enable;
 		qcom,mdss-dsi-te-using-te-pin;
 		qcom,mdss-panel-on-dimming-delay = <120>;
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [
+				29 00 00 00 02 B0 41 50 00
+				00 25 58 32 90 10 08 BA AB
+				51 09 00 10 00 29 00 00 01
+				AC E5 54 05 60 6E 87 A0 B6
+				CF E8 E9 EA 0E BE CE DE EE
+				FF F0 40 00 40 44 20 06 95
+				A2 90 00 0A F9 64 FF 0E 0B
+				E0 08 DB F8 00 02 90 10 00
+				00 02 B0 03];
+		cm,mdss-livedisplay-cabc-post-cmd = [39 01 00 00 01 00 02 55 00];
 	};
 };
