ARM: dts: Add LiveDisplay CABC feature
Change-Id: I92dd7068f7bbe6ab5d172ba265729611bc27fa11

--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
@@ -105,5 +105,39 @@
 				15 01 00 00 01 00 02 FF 10
 				15 01 00 00 01 00 02 55 80
 				15 01 00 00 01 00 02 26 02];
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [
+				15 01 00 00 01 00 02 FF 23
+				15 00 00 00 01 00 02 FB 01
+				15 00 00 00 01 00 02 09 02
+				15 00 00 00 01 00 02 0A 03
+				15 00 00 00 01 00 02 0B 05
+				15 00 00 00 01 00 02 0C 05
+				15 00 00 00 01 00 02 0D 06
+				15 00 00 00 01 00 02 0E 08
+				15 00 00 00 01 00 02 0F 08
+				15 00 00 00 01 00 02 10 09
+				15 00 00 00 01 00 02 11 0A
+				15 00 00 00 01 00 02 12 0A
+				15 00 00 00 01 00 02 32 02
+				15 00 00 00 01 00 02 33 08
+				15 00 00 00 01 00 02 17 F3
+				15 00 00 00 01 00 02 18 E2
+				15 00 00 00 01 00 02 19 D2
+				15 00 00 00 01 00 02 1A C1
+				15 00 00 00 01 00 02 1B B1
+				15 00 00 00 01 00 02 1C A3
+				15 00 00 00 01 00 02 1D 87
+				15 00 00 00 01 00 02 1E 87
+				15 00 00 00 01 00 02 1F 87
+				15 00 00 00 01 00 02 20 66
+				15 01 00 00 01 00 02 FF 10
+				15 00 00 00 01 00 02 51 FF
+				15 01 00 00 01 00 02 55 02];
+		cm,mdss-livedisplay-cabc-post-cmd = [
+				15 00 00 00 01 00 02 FF 10
+				15 01 00 00 01 00 02 55 00];
 	};
 };
