--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
@@ -92,5 +92,39 @@
 		qcom,mdss-dsi-te-dcs-command = <1>;
 		qcom,mdss-dsi-te-check-enable;
 		qcom,mdss-dsi-te-using-te-pin;
+		cm,mdss-livedisplay-cabc-ui-value = <0x01>;
+		cm,mdss-livedisplay-cabc-image-value = <0x02>;
+		cm,mdss-livedisplay-cabc-video-value = <0x03>;
+		cm,mdss-livedisplay-cabc-cmd = [
+				15 01 00 00 01 00 02 ff 23
+				15 00 00 00 01 00 02 fb 01
+				15 00 00 00 01 00 02 09 02
+				15 00 00 00 01 00 02 0a 03
+				15 00 00 00 01 00 02 0b 05
+				15 00 00 00 01 00 02 0c 05
+				15 00 00 00 01 00 02 0d 06
+				15 00 00 00 01 00 02 0e 08
+				15 00 00 00 01 00 02 0f 08
+				15 00 00 00 01 00 02 10 09
+				15 00 00 00 01 00 02 11 0a
+				15 00 00 00 01 00 02 12 0a
+				15 00 00 00 01 00 02 32 02
+				15 00 00 00 01 00 02 33 08
+				15 00 00 00 01 00 02 17 f3
+				15 00 00 00 01 00 02 18 e2
+				15 00 00 00 01 00 02 19 d2
+				15 00 00 00 01 00 02 1a c1
+				15 00 00 00 01 00 02 1b b1
+				15 00 00 00 01 00 02 1c a3
+				15 00 00 00 01 00 02 1d 87
+				15 00 00 00 01 00 02 1e 87
+				15 00 00 00 01 00 02 1f 87
+				15 00 00 00 01 00 02 20 66
+				15 01 00 00 01 00 02 ff 10
+				15 00 00 00 01 00 02 51 ff
+				15 01 00 00 01 00 02 55 02];
+		cm,mdss-livedisplay-cabc-post-cmd = [
+				15 00 00 00 01 00 02 ff 10
+				15 01 00 00 01 00 02 55 00];
 	};
 };
