--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-pro-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-pro-cmd.dtsi
@@ -118,5 +118,25 @@
 				80 00 29 01 00 00 00 00 02
 				B0 03];
 		cm,mdss-livedisplay-cabc-post-cmd = [39 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				05 01 00 00 78 00 02 11 00
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 11
+				29 01 00 00 00 00 02 B0 03];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				05 01 00 00 05 00 02 11 00
+				29 01 00 00 00 00 02 B0 00
+				29 01 00 00 00 00 02 84 00
+				29 01 00 00 00 00 14 C8 01
+				00 FB 05 FD FC E0 00 FA 02
+				F6 FC F0 00 F8 FF ED FC 01
+				29 01 00 00 00 00 2C CA 1D
+				FC F6 C2 00 D6 E5 D3 00 D3
+				B2 F5 00 3F F8 FE FA 18 ED
+				00 F7 30 FF 00 00 E7 39 1D
+				FF 00 FF 00 5B F4 40 FF 00
+				00 FF 00 30 C4 FF 29 01 00
+				00 00 00 02 B0 03];
 	};
 };
