--- a/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-xcmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-jdi-fhd-r63452-xcmd.dtsi
@@ -118,5 +118,23 @@
 				80 00 29 01 00 00 00 00 02
 				B0 03];
 		cm,mdss-livedisplay-cabc-post-cmd = [39 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 11
+				29 00 00 00 00 00 02 CA 1C
+				29 01 00 00 00 00 02 B0 03];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				05 01 00 00 05 00 02 11 00
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 00
+				29 00 00 00 00 00 2C CA 1D
+				FC E2 92 00 ED F1 DB 00 D6
+				01 1F 00 74 00 EC EC 0F F7
+				FD 00 1A FF 00 00 F7 2E 1D
+				FF 00 FF 00 7D F6 2D FF 00
+				00 FF 34 00 FF FF 29 01 00
+				00 00 00 02 B0 03];
 	};
 };
