--- a/arch/arm/boot/dts/qcom/dsi-panel-lgd-fhd-td4322-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-lgd-fhd-td4322-cmd.dtsi
@@ -103,5 +103,23 @@
 				80 00 29 01 00 00 00 00 02
 				B0 03];
 		cm,mdss-livedisplay-cabc-post-cmd = [39 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 11
+				29 00 00 00 00 00 02 CA 1C
+				29 01 00 00 00 00 02 B0 03];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				05 01 00 00 10 00 02 11 00
+				29 01 00 00 00 00 02 B0 00
+				29 01 00 00 00 00 02 84 00
+				29 01 00 00 00 00 02 C8 00
+				29 01 00 00 00 00 2C CA 1D
+				FC BC 7D 00 D4 E5 D7 00 E0
+				F5 D2 00 3F FF FF F8 34 E7
+				00 EC 29 FF 00 00 EB 39 1E
+				FF 00 FF 00 71 F9 42 FF 00
+				00 FF 00 35 C6 FF 29 01 00
+				00 00 00 02 B0 03];
 	};
 };
