--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-td4722-xcmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-td4722-xcmd.dtsi
@@ -113,5 +113,17 @@
 				80 00 29 01 00 00 00 00 02
 				B0 03];
 		cm,mdss-livedisplay-cabc-post-cmd = [15 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 11
+				29 00 00 00 00 00 02 CA 1C
+				29 00 00 00 00 00 02 EA 0F
+				29 01 00 00 00 00 02 B0 03];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				29 00 00 00 00 00 02 B0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 C8 01
+				29 00 00 00 00 00 02 CA 1D
+				29 01 00 00 00 00 02 B0 03];
 	};
 };
