--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-nt35695-cmd.dtsi
@@ -126,5 +126,18 @@
 		cm,mdss-livedisplay-cabc-post-cmd = [
 				15 00 00 00 01 00 02 FF 10
 				15 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				15 00 00 00 00 00 02 51 FF
+				15 00 00 00 00 00 02 53 24
+				15 01 00 00 00 00 02 55 00
+				05 01 00 00 78 00 02 11 00
+				05 01 00 00 14 00 02 29 00];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				15 01 00 00 01 00 02 FF 22
+				15 00 00 00 01 00 02 FB 01
+				15 00 00 00 01 00 02 FA 01
+				15 01 00 00 01 00 02 FF 10
+				15 01 00 00 01 00 02 55 80
+				15 01 00 00 01 00 02 26 02];
 	};
 };
