--- a/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-td4722-xcmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-sharp-fhd-td4722-xcmd.dtsi
@@ -111,5 +111,17 @@
 				E0 08 DB F8 00 02 90 10 00
 				00 02 B0 03];
 		cm,mdss-livedisplay-cabc-post-cmd = [15 01 00 00 01 00 02 55 00];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 c8 11
+				29 00 00 00 00 00 02 ca 1c
+				29 00 00 00 00 00 02 ea 0f
+				29 01 00 00 00 00 02 b0 03];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+				29 00 00 00 00 00 02 b0 04
+				39 00 00 00 00 00 02 84 00
+				29 00 00 00 00 00 02 c8 01
+				29 00 00 00 00 00 02 ca 1d
+				29 01 00 00 00 00 02 b0 03];
 	};
 };
